test/compiler_errors/override-builtin.lzx
<canvas>
  <!-- SHOULD generate warning that 'apply' is overriding a builtin method -->

  <class name="myview" width="100" height="100" bgcolor="red">
    <attribute  name="apply" value="100" />
    <attribute  name="y" value="200"/>
  </class>
  
  <myview/>
  <class name="mbad">
    <method name="nextMethod">
    </method>
  </class>


</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2008 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
